Revision history for DBIx::Class

        - rename DBIX_CLASS_STORAGE_DBI_DEBUG to DBIC_TRACE
        - rename _parent_rs to _parent_source in ResultSet

0.06999_05 2006-07-04 14:40:01
        - fix issue with incorrect $rs->{attrs}{alias}
        - fix subclassing issue with source_name
        - tweak quotes test to output text on failure
        - fix Schema->txn_do to not fail as a classmethod

0.06999_04 2006-06-29 20:18:47
        - disable cdbi-t/02-Film.t warning tests under AS perl
        - fixups to MySQL tests (aka "work round mysql being retarded")
        - compat tweaks for Storage debug logging

0.06999_03 2006-06-26 21:04:44
        - various documentation improvements
        - fixes to pass test suite on Windows
        - rewrote and cleaned up SQL::Translator tests
        - changed relationship helpers to only call ensure_class_loaded when the
          join condition is inferred 
        - rewrote many_to_many implementation, now provides helpers for adding
          and deleting objects without dealing with the link table
        - reworked InflateColumn implementation to lazily deflate where
          possible; now handles passing an inflated object to new()
        - changed join merging to not create a rel_2 alias when adding a join
          that already exists in a parent resultset
        - Storage::DBI::deployment_statements now calls ensure_connected
          if it isn't passed a type 
        - fixed Componentized::ensure_class_loaded
        - InflateColumn::DateTime supports date as well as datetime
        - split Storage::DBI::MSSQL into MSSQL and Sybase::MSSQL
        - fixed wrong debugging hook call in Storage::DBI 
        - set connect_info properly before setting any ->sql_maker things 

0.06999_02 2006-06-09 23:58:33
        - Fixed up POD::Coverage tests, filled in some POD holes
        - Added a warning for incorrect component order in load_components
        - Fixed resultset bugs to do with related searches