@@ -1,5 +1,6 @@
 Revision history for DBIx::Class
 
+        - cleanup UTF8Columns and make more efficient
         - rename DBIX_CLASS_STORAGE_DBI_DEBUG to DBIC_TRACE
         - rename _parent_rs to _parent_source in ResultSet
 
